# snmmi-ai-challenge-2023

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
notebooks/: ensemble.ipynb  experiment_charts.ipynb
ospkg/: __main__.py  base.py  cli.py  constants.py  datasets.py  ensemble_snmmi.py  interpolation.py  preprocessing.py  utils.py
ospkg/commands/: generate_jobs.py  run.py
ospkg/models/: __init__.py  base.py  box.py  dl_models.py  plain_models.py  sig.py
tests/: test_models.py
